<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySecundaria"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/Texto2"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <AutoCompleteTextView
        android:id="@+id/ACTFruta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:hint="@string/ejefruta"
        android:inputType="textAutoComplete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/Texto3"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <AutoCompleteTextView
        android:id="@+id/ACTAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:hint="@string/ejeanimal"
        android:inputType="textAutoComplete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/Texto4"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <AutoCompleteTextView
        android:id="@+id/ACTLenguaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:hint="@string/ejelenguaje"
        android:inputType="textEmailAddress" />

    <ProgressBar
        android:id="@+id/Pbar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:max="100"
        android:progress="0" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnProcesar"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:text="@string/procesar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>